# Computrain-Python-Expert

./: pyproject.toml  readme.md
Demos/: demo_flask.py
Sandbox/: demo.py  demo_threading.py  user.py
data/: sqlite.db
scripts/: bankaccount_oo.py  data.txt  demo_cache.ipynb  demo_closure.py  demo_custom_tkinter.py  demo_decorator.py  demo_errors.py  demo_flask.py  demo_fractions.py  demo_generators.py  demo_partial.py  demo_tkinter_openfile.py  demo_type_hinting.py  opdracht_debug_decorator.py  person_oo.py  read_data_file.py  use_user.py  user.py
scripts/templates/: base.html  list.html
src/python_expert/: main.py
src/python_expert/gui/: user_input.py
src/python_expert/models/: user.py
src/python_expert/web/: start_flask.py
src/python_expert/web/templates/: users.html
src/python_expert_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_user.py
